国家タグ関連コード自動追加

--- a/localisation/english/map/country_names/geacps_country_names__l_english.yml
+++ b/localisation/english/map/country_names/geacps_country_names__l_english.yml
@@ -1488,981 +1488,6 @@
  TYU_DEF: "Tyumen"
  TYU_ADJ: "Tyumenian"
  
-<<<<<<< HEAD
- VAX: "Wa"
- VAX_DEF: "Wa"
- VAX_ADJ: "Wa"
- 
- WTR: "West Turkestan"
- WTR_DEF: "West Turkestan"
- WTR_ADJ: "West Turkes"
- 
- XIK: "Xikang"
- XIK_DEF: "Xikang"
- XIK_ADJ: "Xikang"
- 
- XIZ: "Xizang"
- XIZ_DEF: "Xizang"
- XIZ_ADJ: "Xizang"
- 
- ZHE: "Zhejiang"
- ZHE_DEF: "Zhejiang"
- ZHE_ADJ: "Zhejiang"
- 
- ZHI: "Zhili"
- ZHI_DEF: "Zhili"
- ZHI_ADJ: "Zhili"
- 
-#ヨーロッパ:
- AEG: "Aegean"
- AEG_DEF: "Aegean"
- AEG_ADJ: "Aegean"
- 
- ALA: "Åland"
- ALA_DEF: "Åland"
- ALA_ADJ: "Ålandic"
- 
- APN: "Alps"
- APN_DEF: "Alps"
- APN_ADJ: "Alpine"
- 
- ADR: "Andorra"
- ADR_DEF: "Andorra"
- ADR_ADJ: "Andorran"
- 
- AOS: "Aosta"
- AOS_DEF: "Aosta"
- AOS_ADJ: "Aostan"
- 
- ARA: "Aragon"
- ARA_DEF: "Aragon"
- ARA_ADJ: "Aragonese"
- 
- ATR: "Asturias"
- ATR_DEF: "Asturias"
- ATR_ADJ: "Asturian"
- 
- ATS: "Athos"
- ATS_DEF: "Athos"
- ATS_ADJ: "Athonite"
- 
- BDN: "Baden"
- BDN_DEF: "Baden"
- BDN_ADJ: "Badenese"
- 
- BLE: "Baleares"
- BLE_DEF: "Baleares"
- BLE_ADJ: "Balearic"
- 
- BLK: "Balkan"
- BLK_DEF: "Balkan"
- BLK_ADJ: "Balkan"
- 
- BLT: "Baltic"
- BLT_DEF: "Baltic"
- BLT_ADJ: "Baltic"
- 
- BSQ: "Basque"
- BSQ_DEF: "Basque"
- BSQ_ADJ: "Basque"
- 
- BRL: "Berlin"
- BRL_DEF: "Berlin"
- BRL_ADJ: "Berliner"
- 
- BOH: "Bohemia"
- BOH_DEF: "Bohemia"
- BOH_ADJ: "Bohemian"
- 
- BRG: "Borgogne"
- BRG_DEF: "Borgogne"
- BRG_ADJ: "Bourgognon"
- 
- BDB: "Brandenburg"
- BDB_DEF: "Brandenburg"
- BDB_ADJ: "Brandenburg"
- 
- BGL: "Burgenland"
- BGL_DEF: "Burgenland"
- BGL_ADJ: "Burgenland"
- 
- BYZ: "Byzantium"
- BYZ_DEF: "Byzantium"
- BYZ_ADJ: "Byzantine"
- 
- CTB: "Cantabria"
- CTB_DEF: "Cantabria"
- CTB_ADJ: "Cantabrian"
- 
- CRT: "Carinthia"
- CRT_DEF: "Carinthia"
- CRT_ADJ: "Carinthian"
- 
- CRN: "Carniola"
- CRN_DEF: "Carniola"
- CRN_ADJ: "Carniolan"
- 
- CST: "Castille"
- CST_DEF: "Castille"
- CST_ADJ: "Castillian"
- 
- CLT: "Celts"
- CLT_DEF: "Celts"
- CLT_ADJ: "Celtic"
- 
- CHE: "Chechnya"
- CHE_DEF: "Chechnya"
- CHE_ADJ: "Chechen"
- 
- CHS: "Cherkessia"
- CHS_DEF: "Cherkessia"
- CHS_ADJ: "Cherkess"
- 
- COW: "Cornwall"
- COW_DEF: "Cornwall"
- COW_ADJ: "Cornish"
- 
- CRL: "Courland"
- CRL_DEF: "Courland"
- CRL_ADJ: "Courlander"
- 
- CRW: "Cracow"
- CRW_DEF: "Cracow"
- CRW_ADJ: "Cracovian"
- 
- CRE: "Creta"
- CRE_DEF: "Creta"
- CRE_ADJ: "Cretan"
- 
- DAL: "Dalmatia"
- DAL_DEF: "Dalmatia"
- DAL_ADJ: "Dalmatian"
- 
- EXT: "Estremadura"
- EXT_DEF: "Estremadura"
- EXT_ADJ: "Estremaduran"
- 
- EUR: "Europe"
- EUR_DEF: "Europe"
- EUR_ADJ: "European"
- 
- FRO: "Faroe"
- FRO_DEF: "Faroe"
- FRO_ADJ: "Faroese"
- 
- FIU: "Fiume"
- FIU_DEF: "Fiume"
- FIU_ADJ: "Fiumean"
- 
- FLN: "Flanders"
- FLN_DEF: "Flanders"
- FLN_ADJ: "Flemish"
- 
- GAL: "Galicia"
- GAL_DEF: "Galicia"
- GAL_ADJ: "Galician"
- 
- GIB: "Gibraltar"
- GIB_DEF: "Gibraltar"
- GIB_ADJ: "Gibraltarian"
- 
- GBR: "Great Britain"
- GBR_DEF: "Great Britain"
- GBR_ADJ: "British"
- 
- GUE: "Guernsey"
- GUE_DEF: "Guernsey"
- GUE_ADJ: "Guernseymen"
- 
- HES: "Hesse"
- HES_DEF: "Hesse"
- HES_ADJ: "Hessian"
- 
- HLS: "Holstein"
- HLS_DEF: "Holstein"
- HLS_ADJ: "Holsteinian"
- 
- IBE: "Iberia"
- IBE_DEF: "Iberia"
- IBE_ADJ: "Iberian"
- 
- IGR: "Ingria"
- IGR_DEF: "Ingria"
- IGR_ADJ: "Ingrian"
- 
- ING: "Ingushetia"
- ING_DEF: "Ingushetia"
- ING_ADJ: "Ingush"
- 
- ION: "Ionian Islands"
- ION_DEF: "Ionian Islands"
- ION_ADJ: "Ionian"
- 
- IST: "Istria"
- IST_DEF: "Istria"
- IST_ADJ: "Istrian"
- 
- JER: "Jersey"
- JER_DEF: "Jersey"
- JER_ADJ: "Jerseymen"
- 
- KRC: "Karachay"
- KRC_DEF: "Karachay"
- KRC_ADJ: "Karachay"
- 
- KRV: "Kirov"
- KRV_DEF: "Kirov"
- KRV_ADJ: "Kirov"
- 
- LMN: "La Mancha"
- LMN_DEF: "La Mancha"
- LMN_ADJ: "Manchegan"
- 
- LRJ: "La Rioja"
- LRJ_DEF: "La Rioja"
- LRJ_ADJ: "Riojan"
- 
- LMK: "Lemko"
- LMK_DEF: "Lemko"
- LMK_ADJ: "Lemko"
- 
- LON: "Leon"
- LON_DEF: "Leon"
- LON_ADJ: "Leonese"
- 
- LIE: "Liechtenstein"
- LIE_DEF: "Liechtenstein"
- LIE_ADJ: "Liechtensteiner"
- 
- LIV: "Livonia"
- LIV_DEF: "Livonia"
- LIV_ADJ: "Livonian"
- 
- LOD: "Lodomeria"
- LOD_DEF: "Lodomeria"
- LOD_ADJ: "Lodomerian"
- 
- LOM: "Lombardy"
- LOM_DEF: "Lombardy"
- LOM_ADJ: "Lombard"
- 
- LAS: "Lower Austria"
- LAS_DEF: "Lower Austria"
- LAS_ADJ: "Lower Austrian"
- 
- MDR: "Madrid"
- MDR_DEF: "Madrid"
- MDR_ADJ: "Madrilenian"
- 
- MNN: "Mann"
- MNN_DEF: "Mann"
- MNN_ADJ: "Manx"
- 
- MEZ: "Mezzogiorno"
- MEZ_DEF: "Mezzogiorno"
- MEZ_ADJ: "Mezzogiornese"
- 
- MCO: "Monaco"
- MCO_DEF: "Monaco"
- MCO_ADJ: "Monegasque"
- 
- MRV: "Moravia"
- MRV_DEF: "Moravia"
- MRV_ADJ: "Moravian"
- 
- MRD: "Mordovia"
- MRD_DEF: "Mordovia"
- MRD_ADJ: "Mordovian"
- 
- MOS: "Moscow"
- MOS_DEF: "Moscow"
- MOS_ADJ: "Muscovite"
- 
- MUR: "Murcia"
- MUR_DEF: "Murcia"
- MUR_ADJ: "Murcian"
- 
- NTL: "Netherlands"
- NTL_DEF: "Netherlands"
- NTL_ADJ: "Dutch"
- 
- NRD: "Nordic"
- NRD_DEF: "Nordic"
- NRD_ADJ: "Nordic"
- 
- NRM: "Normandy"
- NRM_DEF: "Normandy"
- NRM_ADJ: "Norman"
- 
- NGR: "North Germany"
- NGR_DEF: "North Germany"
- NGR_ADJ: "North German"
- 
- ORB: "Orenburg"
- ORB_DEF: "Orenburg"
- ORB_ADJ: "Orenburgian"
- 
- PAD: "Padania"
- PAD_DEF: "Padania"
- PAD_ADJ: "Padanian"
- 
- PRM: "Perm"
- PRM_DEF: "Perm"
- PRM_ADJ: "Permian"
- 
- PIE: "Piedmont"
- PIE_DEF: "Piedmont"
- PIE_ADJ: "Piedmontese"
- 
- POM: "Pomerania"
- POM_DEF: "Pomerania"
- POM_ADJ: "Pomeranian"
- 
- POS: "Poznań"
- POS_DEF: "Poznań"
- POS_ADJ: "Poznańian"
- 
- RHI: "Rhine"
- RHI_DEF: "Rhine"
- RHI_ADJ: "Rhenish"
- 
- RDS: "Rhodes"
- RDS_DEF: "Rhodes"
- RDS_ADJ: "Rhodian"
- 
- RME: "Rome"
- RME_DEF: "Rome"
- RME_ADJ: "Roman"
- 
- RUS: "Russia"
- RUS_DEF: "Russia"
- RUS_ADJ: "Russian"
- 
- RTN: "Ruthenia"
- RTN_DEF: "Ruthenia"
- RTN_ADJ: "Ruthenian"
- 
- SAR: "Saarland"
- SAR_DEF: "Saarland"
- SAR_ADJ: "Saar"
- 
- SLZ: "Salzburg"
- SLZ_DEF: "Salzburg"
- SLZ_ADJ: "Salzburgian"
- 
- SMA: "Samara"
- SMA_DEF: "Samara"
- SMA_ADJ: "Samaran"
- 
- SMR: "San Marino"
- SMR_DEF: "San Marino"
- SMR_ADJ: "Sammarinese"
- 
- SME: "Sápmi"
- SME_DEF: "Sápmi"
- SME_ADJ: "Sámi"
- 
- SCA: "Scandinavia"
- SCA_DEF: "Scandinavia"
- SCA_ADJ: "Scandinavian"
- 
- SEM: "Semigallia"
- SEM_DEF: "Semigallia"
- SEM_ADJ: "Semigallian"
- 
- SIB: "Siberia"
- SIB_DEF: "Siberia"
- SIB_ADJ: "Siberian"
- 
- SLA: "Slav"
- SLA_DEF: "Slav"
- SLA_ADJ: "Slavic"
- 
- SLN: "Slavonia"
- SLN_DEF: "Slavonia"
- SLN_ADJ: "Slavonian"
- 
- SGR: "South Germany"
- SGR_DEF: "South Germany"
- SGR_ADJ: "South German"
- 
- STY: "Styria"
- STY_DEF: "Styria"
- STY_ADJ: "Styrian"
- 
- SDT: "Sudetenland"
- SDT_DEF: "Sudetenland"
- SDT_ADJ: "Sudeten"
- 
- THU: "Thuringia"
- THU_DEF: "Thuringia"
- THU_ADJ: "Thuringian"
- 
- TRN: "Transnistria"
- TRN_DEF: "Transnistria"
- TRN_ADJ: "Transnistrian"
- 
- TRL: "Tyrol"
- TRL_DEF: "Tyrol"
- TRL_ADJ: "Tyrolean"
- 
- ULY: "Ulyanovsk"
- ULY_DEF: "Ulyanovsk"
- ULY_ADJ: "Ulyanovskian"
- 
- UAS: "Upper Austria"
- UAS_DEF: "Upper Austria"
- UAS_ADJ: "Upper Austrian"
- 
- URA: "Ural"
- URA_DEF: "Ural"
- URA_ADJ: "Uralian"
- 
- VAL: "Valencia"
- VAL_DEF: "Valencia"
- VAL_ADJ: "Valencian"
- 
- VIE: "Vienna"
- VIE_DEF: "Vienna"
- VIE_ADJ: "Viennese"
- 
- VOJ: "Vojvodina"
- VOJ_DEF: "Vojvodina"
- VOJ_ADJ: "Vojvodinan"
- 
- VOR: "Vorarlberg"
- VOR_DEF: "Vorarlberg"
- VOR_ADJ: "Vorarlbergian"
- 
- VOS: "Vostoslavia"
- VOS_DEF: "Vostoslavia"
- VOS_ADJ: "Vostoslav"
- 
- WLC: "Wallachia"
- WLC_DEF: "Wallachia"
- WLC_ADJ: "Wallachian"
- 
- WLL: "Wallonia"
- WLL_DEF: "Wallonia"
- WLL_ADJ: "Walloon"
- 
- WPH: "Westphalia"
- WPH_DEF: "Westphalia"
- WPH_ADJ: "Westphalian"
- 
- ZAP: "Zapadoslavia"
- ZAP_DEF: "Zapadoslavia"
- ZAP_ADJ: "Zapadoslav"
- 
- ZPR: "Zaporizhzhia"
- ZPR_DEF: "Zaporizhzhia"
- ZPR_ADJ: "Zaporizhzhian"
- 
-#アフリカ:
- AFR: "Africa"
- AFR_DEF: "Africa"
- AFR_ADJ: "African"
- 
- AMB: "Ambazonia"
- AMB_DEF: "Ambazonia"
- AMB_ADJ: "Ambazonian"
- 
- ASH: "Ashanti"
- ASH_DEF: "Ashanti"
- ASH_ADJ: "Ashanti"
- 
- AZA: "Azawad"
- AZA_DEF: "Azawad"
- AZA_ADJ: "Azawad"
- 
- BEN: "Benin"
- BEN_DEF: "Benin"
- BEN_ADJ: "Beninese"
- 
- BIA: "Biafra"
- BIA_DEF: "Biafra"
- BIA_ADJ: "Biafran"
- 
- CNA: "Canarias"
- CNA_DEF: "Canarias"
- CNA_ADJ: "Canarian"
- 
- CPV: "Cape Verde"
- CPV_DEF: "Cape Verde"
- CPV_ADJ: "Cape Verdean"
- 
- CEU: "Ceuta"
- CEU_DEF: "Ceuta"
- CEU_ADJ: "Ceutan"
- 
- COM: "Comoros"
- COM_DEF: "Comoros"
- COM_ADJ: "Comoran"
- 
- CYR: "Cyrenaica"
- CYR_DEF: "Cyrenaica"
- CYR_ADJ: "Cyrenaican"
- 
- DGB: "Dagbon"
- DGB_DEF: "Dagbon"
- DGB_ADJ: "Dagbani"
- 
- EQA: "Equatorial Africa"
- EQA_DEF: "Equatorial Africa"
- EQA_ADJ: "Equatorial African"
- 
- FEZ: "Fezzan"
- FEZ_DEF: "Fezzan"
- FEZ_ADJ: "Fezzani"
- 
- IFN: "Ifni"
- IFN_DEF: "Ifni"
- IFN_ADJ: "Ifni"
- 
- KAT: "Katanga"
- KAT_DEF: "Katanga"
- KAT_ADJ: "Katangan"
- 
- LSO: "Lesotho"
- LSO_DEF: "Lesotho"
- LSO_ADJ: "Lesothan"
- 
- MUS: "Mauritius"
- MUS_DEF: "Mauritius"
- MUS_ADJ: "Mauritian"
- 
- MYT: "Mayotte"
- MYT_DEF: "Mayotte"
- MYT_ADJ: "Mahoran"
- 
- MLL: "Melilla"
- MLL_DEF: "Melilla"
- MLL_ADJ: "Melillan"
- 
- NAF: "North Africa"
- NAF_DEF: "North Africa"
- NAF_ADJ: "North African"
- 
- REU: "Reunion"
- REU_DEF: "Reunion"
- REU_ADJ: "Reunionese"
- 
- RHO: "Rhodesia"
- RHO_DEF: "Rhodesia"
- RHO_ADJ: "Rhodesian"
- 
- R-U: "Ruanda-Urundi"
- R-U_DEF: "Ruanda-Urundi"
- R-U_ADJ: "Ruanda-Urundian"
- 
- STP: "São Tomé and Príncipe"
- STP_DEF: "São Tomé and Príncipe"
- STP_ADJ: "Sao Tomean and Principean"
- 
- SYC: "Seychelles"
- SYC_DEF: "Seychelles"
- SYC_ADJ: "Seychellois"
- 
- SML: "Somaliland"
- SML_DEF: "Somaliland"
- SML_ADJ: "Somalilander"
- 
- SKS: "South Kasai"
- SKS_DEF: "South Kasai"
- SKS_ADJ: "South Kasaian"
- 
- SSD: "South Sudan"
- SSD_DEF: "South Sudan"
- SSD_ADJ: "South Sudanese"
- 
- SCZ: "Suez Canal Zone"
- SCZ_DEF: "Suez Canal Zone"
- SCZ_ADJ: "Suez Canal Zone"
- 
- SWL: "Swaziland"
- SWL_DEF: "Swaziland"
- SWL_ADJ: "Swazi"
- 
- TAN: "Tanganyika"
- TAN_DEF: "Tanganyika"
- TAN_ADJ: "Tanganyikan"
- 
- TGE: "Tangier"
- TGE_DEF: "Tangier"
- TGE_ADJ: "Tangierian"
- 
- TRP: "Tripolitania"
- TRP_DEF: "Tripolitania"
- TRP_ADJ: "Tripolitanian"
- 
- WAF: "West Africa"
- WAF_DEF: "West Africa"
- WAF_ADJ: "West African"
- 
- WTG: "Western Togoland"
- WTG_DEF: "Western Togoland"
- WTG_ADJ: "West Togolese"
- 
- ZAN: "Zanzibar"
- ZAN_DEF: "Zanzibar"
- ZAN_ADJ: "Zanzibari"
- 
-#新大陸:
- AEC: "American East Coast"
- AEC_DEF: "American East Coast"
- AEC_ADJ: "American East Coastal"
- 
- AWC: "American West Coast"
- AWC_DEF: "American West Coast"
- AWC_ADJ: "American West Coastal"
- 
- AGU: "Anguilla"
- AGU_DEF: "Anguilla"
- AGU_ADJ: "Anguillan"
- 
- ATG: "Antigua"
- ATG_DEF: "Antigua"
- ATG_ADJ: "Antiguan"
- 
- ARU: "Aruba"
- ARU_DEF: "Aruba"
- ARU_ADJ: "Aruban"
- 
- BRB: "Barbados"
- BRB_DEF: "Barbados"
- BRB_ADJ: "Barbadan"
- 
- BAR: "Barbuda"
- BAR_DEF: "Barbuda"
- BAR_ADJ: "Barbudan"
- 
- BMU: "Bermuda"
- BMU_DEF: "Bermuda"
- BMU_ADJ: "Bermudan"
- 
- CSC: "Cascadia"
- CSC_DEF: "Cascadia"
- CSC_ADJ: "Cascadian"
- 
- CYM: "Cayman"
- CYM_DEF: "Cayman"
- CYM_ADJ: "Caymanian"
- 
- CAC: "CentralAmerica"
- CAC_DEF: "CentralAmerica"
- CAC_ADJ: "CentralAmerican"
- 
- DMA: "Dominica"
- DMA_DEF: "Dominica"
- DMA_ADJ: "Dominican"
- 
- FKL: "Falkland"
- FKL_DEF: "Falkland"
- FKL_ADJ: "Falklander"
- 
- GLA: "Great Lakes"
- GLA_DEF: "Great Lakes"
- GLA_ADJ: "Great Laker"
- 
- GPA: "Great Plains"
- GPA_DEF: "Great Plains"
- GPA_ADJ: "Great Plains"
- 
- GRL: "Greenland"
- GRL_DEF: "Greenland"
- GRL_ADJ: "Greenlandic"
- 
- GRD: "Grenada"
- GRD_DEF: "Grenada"
- GRD_ADJ: "Grenadian"
- 
- LEW: "Leeward Islands"
- LEW_DEF: "Leeward Islands"
- LEW_ADJ: "Leeward Islander"
- 
- MTQ: "Martinique"
- MTQ_DEF: "Martinique"
- MTQ_ADJ: "Martinican"
- 
- MSR: "Montserrat"
- MSR_DEF: "Montserrat"
- MSR_ADJ: "Montserratian"
- 
- NVS: "Nevis"
- NVS_DEF: "Nevis"
- NVS_ADJ: "Nevisian"
- 
- NFL: "Newfoundland"
- NFL_DEF: "Newfoundland"
- NFL_ADJ: "Newfoundlandish"
- 
- NAC: "North America"
- NAC_DEF: "North America"
- NAC_ADJ: "North American"
- 
- NGL: "North Greenland"
- NGL_DEF: "North Greenland"
- NGL_ADJ: ""
- 
- PCZ: "Panama Canal Zone"
- PCZ_DEF: "Panama Canal Zone"
- PCZ_ADJ: "Panama Canal Zone"
- 
- QEB: "Quebec"
- QEB_DEF: "Quebec"
- QEB_ADJ: "Quebecois"
- 
- RMT: "Rocky Mountains"
- RMT_DEF: "Rocky Mountains"
- RMT_ADJ: "Rocky Mountainian"
- 
- SBL: "Saint Barthélemy"
- SBL_DEF: "Saint Barthélemy"
- SBL_ADJ: "Barthélemois"
- 
- SKN: "Saint Christopher"
- SKN_DEF: "Saint Christopher"
- SKN_ADJ: "Kittitian"
- 
- STH: "Saint Helena"
- STH_DEF: "Saint Helena"
- STH_ADJ: "Saint Helenian"
- 
- SLC: "Saint Lucia"
- SLC_DEF: "Saint Lucia"
- SLC_ADJ: "Saint Lucian"
- 
- STM: "Saint Martin"
- STM_DEF: "Saint Martin"
- STM_ADJ: "Saint-Martinois"
- 
- SVG: "Saint Vincent and the Grenadines"
- SVG_DEF: "Saint Vincent and the Grenadines"
- SVG_ADJ: "Vincentian and Grenadinian"
- 
- SPM: "Saint-Pierre and Miquelon"
- SPM_DEF: "Saint-Pierre and Miquelon"
- SPM_ADJ: "Saint-Pierrais and Miquelonnais"
- 
- SAC: "South America"
- SAC_DEF: "South America"
- SAC_ADJ: "South American"
- 
- SGL: "South Greenland"
- SGL_DEF: "South Greenland"
- SGL_ADJ: ""
- 
- TOB: "Tobago"
- TOB_DEF: "Tobago"
- TOB_ADJ: "Tobagonian"
- 
- TCA: "Turks and Caicos"
- TCA_DEF: "Turks and Caicos"
- TCA_ADJ: "Turks and Caicos"
- 
- VIR: "Virgin Islands"
- VIR_DEF: "Virgin Islands"
- VIR_ADJ: "Virgin Islander"
- 
- WIW: "Windward Islands"
- WIW_DEF: "Windward Islands"
- WIW_ADJ: "Windward Islander"
- 
-#大洋州:
- ATC: "Antarctica"
- ATC_DEF: "Antarctica"
- ATC_ADJ: "Antarctic"
- 
- CHR: "Christmas Island"
- CHR_DEF: "Christmas Island"
- CHR_ADJ: "Christmas Island"
- 
- COC: "Cocos Islands"
- COC_DEF: "Cocos Islands"
- COC_ADJ: "Cocos Islander"
- 
- UVF: "ʻUvea and Futuna"
- UVF_DEF: "ʻUvea and Futuna"
- UVF_ADJ: "ʻUvean and Futunan"
- 
- KIR: "Kiribati"
- KIR_DEF: "Kiribati"
- KIR_ADJ: "I-Kiribati"
- 
- MHL: "Marshall Islands"
- MHL_DEF: "Marshall Islands"
- MHL_ADJ: "Marshallese"
- 
- NMR: "Nauru"
- NMR_DEF: "Nauru"
- NMR_ADJ: "Nauruan"
- 
- NCL: "New Caledonia"
- NCL_DEF: "New Caledonia"
- NCL_ADJ: "New Caledonian"
- 
- NGU: "New Guinea"
- NGU_DEF: "New Guinea"
- NGU_ADJ: "New Guinean"
- 
- NIU: "Niue"
- NIU_DEF: "Niue"
- NIU_ADJ: "Niuean"
- 
- NFK: "Norfolk"
- NFK_DEF: "Norfolk"
- NFK_ADJ: "Norfolkian"
- 
- PLW: "Palau"
- PLW_DEF: "Palau"
- PLW_ADJ: "Palauan"
- 
- PAP: "Papua"
- PAP_DEF: "Papua"
- PAP_ADJ: "Papuan"
- 
- PCN: "Pitcairn"
- PCN_DEF: "Pitcairn"
- PCN_ADJ: "Pitcairnese"
- 
- PLY: "Polynesia"
- PLY_DEF: "Polynesia"
- PLY_ADJ: "Polynesian"
- 
- COK: "Rarotonga"
- COK_DEF: "Rarotonga"
- COK_ADJ: "Rarotongan"
- 
- TKL: "Tokelau"
- TKL_DEF: "Tokelau"
- TKL_ADJ: "Tokelauan"
- 
- TON: "Tonga"
- TON_DEF: "Tonga"
- TON_ADJ: "Tongan"
- 
- TVL: "Tuvalu"
- TVL_DEF: "Tuvalu"
- TVL_ADJ: "Tuvaluan"
- 
- VUT: "Vanuatu"
- VUT_DEF: "Vanuatu"
- VUT_ADJ: "Vanuatuan"
- 
- WPA: "West Papua"
- WPA_DEF: "West Papua"
- WPA_ADJ: "West Papuan"
- 
-#アメリカ諸州:
- ABA: "Alabama"
- ABA_DEF: "Alabama"
- ABA_ADJ: "Alabamian"
- 
- ALS: "Alaska"
- ALS_DEF: "Alaska"
- ALS_ADJ: "Alaskan"
- 
- ARZ: "Arizona"
- ARZ_DEF: "Arizona"
- ARZ_ADJ: "Arizonan"
- 
- ARK: "Arkansas"
- ARK_DEF: "Arkansas"
- ARK_ADJ: "Arkansan"
- 
- CAL: "California"
- CAL_DEF: "California"
- CAL_ADJ: "Californian"
- 
- CLD: "Colorado"
- CLD_DEF: "Colorado"
- CLD_ADJ: "Coloradan"
- 
- CLU: "Columbia"
- CLU_DEF: "Columbia"
- CLU_ADJ: "Columbian"
- 
- CNT: "Connecticut"
- CNT_DEF: "Connecticut"
- CNT_ADJ: "Connecticuter"
- 
- DEL: "Delaware"
- DEL_DEF: "Delaware"
- DEL_ADJ: "Delawarean"
- 
- FLO: "Florida"
- FLO_DEF: "Florida"
- FLO_ADJ: "Floridian"
- 
- GEG: "Georgia"
- GEG_DEF: "Georgia"
- GEG_ADJ: "Georgian"
- 
- IDA: "Idaho"
- IDA_DEF: "Idaho"
- IDA_ADJ: "Idahoan"
- 
- ILI: "Illinois"
- ILI_DEF: "Illinois"
- ILI_ADJ: "Illinoisan"
- 
- IDI: "Indiana"
- IDI_DEF: "Indiana"
- IDI_ADJ: "Hoosier"
- 
- IOW: "Iowa"
- IOW_DEF: "Iowa"
- IOW_ADJ: "Iowan"
- 
- IQO: "Iroquois"
- IQO_DEF: "Iroquois"
- IQO_ADJ: "Iroquois"
- 
- KAN: "Kansas"
- KAN_DEF: "Kansas"
- KAN_ADJ: "Kansan"
- 
- KTY: "Kentucky"
- KTY_DEF: "Kentucky"
- KTY_ADJ: "Kentucky"
- 
- LUI: "Louisiana"
- LUI_DEF: "Louisiana"
- LUI_ADJ: "Louisianian"
- 
- MNE: "Maine"
- MNE_DEF: "Maine"
- MNE_ADJ: "Mainean"
- 
- MRL: "Maryland"
- MRL_DEF: "Maryland"
- MRL_ADJ: "Marylander"
- 
- MAS: "Massachusetts"
- MAS_DEF: "Massachusetts"
- MAS_ADJ: "Massachusettsan"
- 
- MCH: "Michigan"
- MCH_DEF: "Michigan"
- MCH_ADJ: "Michiganian"
- 
- MNS: "Minnesota"
- MNS_DEF: "Minnesota"
- MNS_ADJ: "Minnesotan"
- 
- MIS: "Mississippi"
- MIS_DEF: "Mississippi"
- MIS_ADJ: "Mississippian"
- 
- MSS: "Missouri"
- MSS_DEF: "Missouri"
- MSS_ADJ: "Missourian"
- 
- MTA: "Montana"
- MTA_DEF: "Montana"
- MTA_ADJ: "Montanan"
- 
-=======
  VNT: "Vientiane"
  VNT_DEF: "Vientiane"
  VNT_ADJ: "Vientianaise"
@@ -2490,6 +1515,10 @@
  ZHI: "Zhili"
  ZHI_DEF: "Zhili"
  ZHI_ADJ: "Zhili"
+ 
+ SUL: "Sulu"
+ SUL_DEF: "Sulu"
+ SUL_ADJ: "Sulu"
  
 #ヨーロッパ:
  AEG: "Aegean"
@@ -3440,7 +2469,6 @@
  MTA_DEF: "Montana"
  MTA_ADJ: "Montanan"
  
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  NEB: "Nebraska"
  NEB_DEF: "Nebraska"
  NEB_ADJ: "Nebraskan"
