--- a/localisation/japanese/map/country_names/geacps_dependent_territory_names_1_l_japanese.yml
+++ b/localisation/japanese/map/country_names/geacps_dependent_territory_names_1_l_japanese.yml
@@ -15960,8 +15960,6 @@
  TYU_leased_territory_DEF: "$OVERLORDADJ$領チュメニ"
  TYU_leased_territory_ADJ: "$OVERLORD$領チュメニ"
  
-<<<<<<< HEAD
-=======
  VNT_colony: "$OVERLORDADJ$領ヴィエンチャン植民地"
  VNT_colony_DEF: "$OVERLORDADJ$領ヴィエンチャン植民地"
  VNT_colony_ADJ: "$OVERLORD$領ヴィエンチャン"
@@ -16005,7 +16003,6 @@
  VNT_leased_territory_DEF: "$OVERLORDADJ$領ヴィエンチャン"
  VNT_leased_territory_ADJ: "$OVERLORD$領ヴィエンチャン"
  
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  VAX_colony: "$OVERLORDADJ$領ワ植民地"
  VAX_colony_DEF: "$OVERLORDADJ$領ワ植民地"
  VAX_colony_ADJ: "$OVERLORD$領ワ"
@@ -16263,6 +16260,49 @@
  ZHI_leased_territory: "$OVERLORDADJ$領直隷"
  ZHI_leased_territory_DEF: "$OVERLORDADJ$領直隷"
  ZHI_leased_territory_ADJ: "$OVERLORD$領直隷"
+ 
+ SUL_colony: "$OVERLORDADJ$領スールー植民地"
+ SUL_colony_DEF: "$OVERLORDADJ$領スールー植民地"
+ SUL_colony_ADJ: "$OVERLORD$領スールー"
+ SUL_colonies_federation: "$OVERLORDADJ$領スールー連邦植民地"
+ SUL_colonies_federation_DEF: "$OVERLORDADJ$領スールー連邦植民地"
+ SUL_colonies_federation_ADJ: "$OVERLORD$領スールー"
+ SUL_colony_and_protected_territory: "$OVERLORDADJ$領スールー植民地及び保護領"
+ SUL_colony_and_protected_territory_DEF: "$OVERLORDADJ$領スールー植民地及び保護領"
+ SUL_colony_and_protected_territory_ADJ: "$OVERLORD$領スールー"
+ SUL_condominium: "共同統治領スールー"
+ SUL_condominium_DEF: "共同統治領スールー"
+ SUL_condominium_ADJ: "$OVERLORD$領スールー"
+ SUL_overseas_territory: "$OVERLORDADJ$領スールー"
+ SUL_overseas_territory_DEF: "$OVERLORDADJ$領スールー"
+ SUL_overseas_territory_ADJ: "$OVERLORD$領スールー"
+ SUL_viceroyalty: "スールー副王領"
+ SUL_viceroyalty_DEF: "スールー副王領"
+ SUL_viceroyalty_ADJ: "$OVERLORD$領スールー"
+ SUL_captaincy_general: "スールー総督領"
+ SUL_captaincy_general_DEF: "スールー総督領"
+ SUL_captaincy_general_ADJ: "$OVERLORD$領スールー"
+ SUL_protected_territory: "$OVERLORDADJ$保護領スールー"
+ SUL_protected_territory_DEF: "$OVERLORDADJ$保護領スールー"
+ SUL_protected_territory_ADJ: "$OVERLORD$領スールー"
+ SUL_constituent_autonomous_province: "$OVERLORDADJ$領スールー州"
+ SUL_constituent_autonomous_province_DEF: "$OVERLORDADJ$領スールー州"
+ SUL_constituent_autonomous_province_ADJ: "$OVERLORD$領スールー"
+ SUL_trust_territory: "$OVERLORDADJ$信託統治領スールー"
+ SUL_trust_territory_DEF: "$OVERLORDADJ$信託統治領スールー"
+ SUL_trust_territory_ADJ: "$OVERLORD$領スールー"
+ SUL_mandated_territory_A: "$OVERLORDADJ$委任統治領スールー"
+ SUL_mandated_territory_A_DEF: "$OVERLORDADJ$委任統治領スールー"
+ SUL_mandated_territory_A_ADJ: "$OVERLORD$領スールー"
+ SUL_mandated_territory_B: "$OVERLORDADJ$委任統治領スールー"
+ SUL_mandated_territory_B_DEF: "$OVERLORDADJ$委任統治領スールー"
+ SUL_mandated_territory_B_ADJ: "$OVERLORD$領スールー"
+ SUL_mandated_territory_C: "$OVERLORDADJ$委任統治領スールー"
+ SUL_mandated_territory_C_DEF: "$OVERLORDADJ$委任統治領スールー"
+ SUL_mandated_territory_C_ADJ: "$OVERLORD$領スールー"
+ SUL_leased_territory: "$OVERLORDADJ$領スールー"
+ SUL_leased_territory_DEF: "$OVERLORDADJ$領スールー"
+ SUL_leased_territory_ADJ: "$OVERLORD$領スールー"
  
 #ヨーロッパ:
  AEG_colony: "$OVERLORDADJ$領エーゲ諸島植民地"
@@ -27927,50 +27967,6 @@
  ZHELTUGA_leased_territory_ADJ: "$OVERLORD$領ゼルトゥガ"
  
 #ヨーロッパ
-<<<<<<< HEAD
- AEGandION_colony: "$OVERLORDADJ$領エーゲ及びイオニア諸島植民地"
- AEGandION_colony_DEF: "$OVERLORDADJ$領エーゲ及びイオニア諸島植民地"
- AEGandION_colony_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
- AEGandION_colonies_federation: "$OVERLORDADJ$領エーゲ及びイオニア諸島連邦植民地"
- AEGandION_colonies_federation_DEF: "$OVERLORDADJ$領エーゲ及びイオニア諸島連邦植民地"
- AEGandION_colonies_federation_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
- AEGandION_colony_and_protected_territory: "$OVERLORDADJ$領エーゲ及びイオニア諸島植民地及び保護領"
- AEGandION_colony_and_protected_territory_DEF: "$OVERLORDADJ$領エーゲ及びイオニア諸島植民地及び保護領"
- AEGandION_colony_and_protected_territory_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
- AEGandION_condominium: "共同統治領エーゲ及びイオニア諸島"
- AEGandION_condominium_DEF: "共同統治領エーゲ及びイオニア諸島"
- AEGandION_condominium_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
- AEGandION_overseas_territory: "$OVERLORDADJ$領エーゲ及びイオニア諸島"
- AEGandION_overseas_territory_DEF: "$OVERLORDADJ$領エーゲ及びイオニア諸島"
- AEGandION_overseas_territory_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
- AEGandION_viceroyalty: "エーゲ及びイオニア諸島副王領"
- AEGandION_viceroyalty_DEF: "エーゲ及びイオニア諸島副王領"
- AEGandION_viceroyalty_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
- AEGandION_captaincy_general: "エーゲ及びイオニア諸島総督領"
- AEGandION_captaincy_general_DEF: "エーゲ及びイオニア諸島総督領"
- AEGandION_captaincy_general_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
- AEGandION_protected_territory: "$OVERLORDADJ$保護領エーゲ及びイオニア諸島"
- AEGandION_protected_territory_DEF: "$OVERLORDADJ$保護領エーゲ及びイオニア諸島"
- AEGandION_protected_territory_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
- AEGandION_constituent_autonomous_province: "$OVERLORDADJ$領エーゲ及びイオニア諸島州"
- AEGandION_constituent_autonomous_province_DEF: "$OVERLORDADJ$領エーゲ及びイオニア諸島州"
- AEGandION_constituent_autonomous_province_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
- AEGandION_trust_territory: "$OVERLORDADJ$信託統治領エーゲ及びイオニア諸島"
- AEGandION_trust_territory_DEF: "$OVERLORDADJ$信託統治領エーゲ及びイオニア諸島"
- AEGandION_trust_territory_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
- AEGandION_mandated_territory_A: "$OVERLORDADJ$委任統治領エーゲ及びイオニア諸島"
- AEGandION_mandated_territory_A_DEF: "$OVERLORDADJ$委任統治領エーゲ及びイオニア諸島"
- AEGandION_mandated_territory_A_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
- AEGandION_mandated_territory_B: "$OVERLORDADJ$委任統治領エーゲ及びイオニア諸島"
- AEGandION_mandated_territory_B_DEF: "$OVERLORDADJ$委任統治領エーゲ及びイオニア諸島"
- AEGandION_mandated_territory_B_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
- AEGandION_mandated_territory_C: "$OVERLORDADJ$委任統治領エーゲ及びイオニア諸島"
- AEGandION_mandated_territory_C_DEF: "$OVERLORDADJ$委任統治領エーゲ及びイオニア諸島"
- AEGandION_mandated_territory_C_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
- AEGandION_leased_territory: "$OVERLORDADJ$領エーゲ及びイオニア諸島"
- AEGandION_leased_territory_DEF: "$OVERLORDADJ$領エーゲ及びイオニア諸島"
- AEGandION_leased_territory_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
-=======
  AEG-ION_colony: "$OVERLORDADJ$領エーゲ＝イオニア諸島植民地"
  AEG-ION_colony_DEF: "$OVERLORDADJ$領エーゲ＝イオニア諸島植民地"
  AEG-ION_colony_ADJ: "$OVERLORD$領エーゲ＝イオニア諸島"
@@ -28013,7 +28009,6 @@
  AEG-ION_leased_territory: "$OVERLORDADJ$領エーゲ＝イオニア諸島"
  AEG-ION_leased_territory_DEF: "$OVERLORDADJ$領エーゲ＝イオニア諸島"
  AEG-ION_leased_territory_ADJ: "$OVERLORD$領エーゲ＝イオニア諸島"
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  
  BYELORUSSIA_colony: "$OVERLORDADJ$領ベロロシア植民地"
  BYELORUSSIA_colony_DEF: "$OVERLORDADJ$領ベロロシア植民地"
@@ -28101,50 +28096,6 @@
  KAR-FIN_leased_territory_DEF: "$OVERLORDADJ$領カレロ＝フィン"
  KAR-FIN_leased_territory_ADJ: "$OVERLORD$領カレロ＝フィン"
  
-<<<<<<< HEAD
- SHLandHLS_colony: "$OVERLORDADJ$領シュレースヴィヒ及びホルシュタイン植民地"
- SHLandHLS_colony_DEF: "$OVERLORDADJ$領シュレースヴィヒ及びホルシュタイン植民地"
- SHLandHLS_colony_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
- SHLandHLS_colonies_federation: "$OVERLORDADJ$領シュレースヴィヒ及びホルシュタイン連邦植民地"
- SHLandHLS_colonies_federation_DEF: "$OVERLORDADJ$領シュレースヴィヒ及びホルシュタイン連邦植民地"
- SHLandHLS_colonies_federation_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
- SHLandHLS_colony_and_protected_territory: "$OVERLORDADJ$領シュレースヴィヒ及びホルシュタイン植民地及び保護領"
- SHLandHLS_colony_and_protected_territory_DEF: "$OVERLORDADJ$領シュレースヴィヒ及びホルシュタイン植民地及び保護領"
- SHLandHLS_colony_and_protected_territory_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
- SHLandHLS_condominium: "共同統治領シュレースヴィヒ及びホルシュタイン"
- SHLandHLS_condominium_DEF: "共同統治領シュレースヴィヒ及びホルシュタイン"
- SHLandHLS_condominium_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
- SHLandHLS_overseas_territory: "$OVERLORDADJ$領シュレースヴィヒ及びホルシュタイン"
- SHLandHLS_overseas_territory_DEF: "$OVERLORDADJ$領シュレースヴィヒ及びホルシュタイン"
- SHLandHLS_overseas_territory_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
- SHLandHLS_viceroyalty: "シュレースヴィヒ及びホルシュタイン副王領"
- SHLandHLS_viceroyalty_DEF: "シュレースヴィヒ及びホルシュタイン副王領"
- SHLandHLS_viceroyalty_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
- SHLandHLS_captaincy_general: "シュレースヴィヒ及びホルシュタイン総督領"
- SHLandHLS_captaincy_general_DEF: "シュレースヴィヒ及びホルシュタイン総督領"
- SHLandHLS_captaincy_general_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
- SHLandHLS_protected_territory: "$OVERLORDADJ$保護領シュレースヴィヒ及びホルシュタイン"
- SHLandHLS_protected_territory_DEF: "$OVERLORDADJ$保護領シュレースヴィヒ及びホルシュタイン"
- SHLandHLS_protected_territory_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
- SHLandHLS_constituent_autonomous_province: "$OVERLORDADJ$領シュレースヴィヒ及びホルシュタイン州"
- SHLandHLS_constituent_autonomous_province_DEF: "$OVERLORDADJ$領シュレースヴィヒ及びホルシュタイン州"
- SHLandHLS_constituent_autonomous_province_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
- SHLandHLS_trust_territory: "$OVERLORDADJ$信託統治領シュレースヴィヒ及びホルシュタイン"
- SHLandHLS_trust_territory_DEF: "$OVERLORDADJ$信託統治領シュレースヴィヒ及びホルシュタイン"
- SHLandHLS_trust_territory_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
- SHLandHLS_mandated_territory_A: "$OVERLORDADJ$委任統治領シュレースヴィヒ及びホルシュタイン"
- SHLandHLS_mandated_territory_A_DEF: "$OVERLORDADJ$委任統治領シュレースヴィヒ及びホルシュタイン"
- SHLandHLS_mandated_territory_A_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
- SHLandHLS_mandated_territory_B: "$OVERLORDADJ$委任統治領シュレースヴィヒ及びホルシュタイン"
- SHLandHLS_mandated_territory_B_DEF: "$OVERLORDADJ$委任統治領シュレースヴィヒ及びホルシュタイン"
- SHLandHLS_mandated_territory_B_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
- SHLandHLS_mandated_territory_C: "$OVERLORDADJ$委任統治領シュレースヴィヒ及びホルシュタイン"
- SHLandHLS_mandated_territory_C_DEF: "$OVERLORDADJ$委任統治領シュレースヴィヒ及びホルシュタイン"
- SHLandHLS_mandated_territory_C_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
- SHLandHLS_leased_territory: "$OVERLORDADJ$領シュレースヴィヒ及びホルシュタイン"
- SHLandHLS_leased_territory_DEF: "$OVERLORDADJ$領シュレースヴィヒ及びホルシュタイン"
- SHLandHLS_leased_territory_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
-=======
  SHL-HLS_colony: "$OVERLORDADJ$領シュレースヴィヒ＝ホルシュタイン植民地"
  SHL-HLS_colony_DEF: "$OVERLORDADJ$領シュレースヴィヒ＝ホルシュタイン植民地"
  SHL-HLS_colony_ADJ: "$OVERLORD$領シュレースヴィヒ＝ホルシュタイン"
@@ -28187,7 +28138,6 @@
  SHL-HLS_leased_territory: "$OVERLORDADJ$領シュレースヴィヒ＝ホルシュタイン"
  SHL-HLS_leased_territory_DEF: "$OVERLORDADJ$領シュレースヴィヒ＝ホルシュタイン"
  SHL-HLS_leased_territory_ADJ: "$OVERLORD$領シュレースヴィヒ＝ホルシュタイン"
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  
 #アフリカ
  GOLDCOASTNORTHERNTERRITORIES_colony: "$OVERLORDADJ$領ゴールド・コースト北部地域植民地"
@@ -28418,50 +28368,6 @@
  COOKISLANDS_federation_mandated_territory_A_DEF: "$OVERLORDADJ$委任統治領クック諸島連邦"
  COOKISLANDS_federation_mandated_territory_A_ADJ: "$OVERLORD$領クック諸島"
  
-<<<<<<< HEAD
- KIRandTVL_colony: "$OVERLORDADJ$領キリバス及びツバル植民地"
- KIRandTVL_colony_DEF: "$OVERLORDADJ$領キリバス及びツバル植民地"
- KIRandTVL_colony_ADJ: "$OVERLORD$領キリバス・ツバル"
- KIRandTVL_colonies_federation: "$OVERLORDADJ$領キリバス及びツバル連邦植民地"
- KIRandTVL_colonies_federation_DEF: "$OVERLORDADJ$領キリバス及びツバル連邦植民地"
- KIRandTVL_colonies_federation_ADJ: "$OVERLORD$領キリバス・ツバル"
- KIRandTVL_colony_and_protected_territory: "$OVERLORDADJ$領キリバス及びツバル植民地及び保護領"
- KIRandTVL_colony_and_protected_territory_DEF: "$OVERLORDADJ$領キリバス及びツバル植民地及び保護領"
- KIRandTVL_colony_and_protected_territory_ADJ: "$OVERLORD$領キリバス・ツバル"
- KIRandTVL_condominium: "共同統治領キリバス及びツバル"
- KIRandTVL_condominium_DEF: "共同統治領キリバス及びツバル"
- KIRandTVL_condominium_ADJ: "$OVERLORD$領キリバス・ツバル"
- KIRandTVL_overseas_territory: "$OVERLORDADJ$領キリバス及びツバル"
- KIRandTVL_overseas_territory_DEF: "$OVERLORDADJ$領キリバス及びツバル"
- KIRandTVL_overseas_territory_ADJ: "$OVERLORD$領キリバス・ツバル"
- KIRandTVL_viceroyalty: "キリバス及びツバル副王領"
- KIRandTVL_viceroyalty_DEF: "キリバス及びツバル副王領"
- KIRandTVL_viceroyalty_ADJ: "$OVERLORD$領キリバス・ツバル"
- KIRandTVL_captaincy_general: "キリバス及びツバル総督領"
- KIRandTVL_captaincy_general_DEF: "キリバス及びツバル総督領"
- KIRandTVL_captaincy_general_ADJ: "$OVERLORD$領キリバス・ツバル"
- KIRandTVL_protected_territory: "$OVERLORDADJ$保護領キリバス及びツバル"
- KIRandTVL_protected_territory_DEF: "$OVERLORDADJ$保護領キリバス及びツバル"
- KIRandTVL_protected_territory_ADJ: "$OVERLORD$領キリバス・ツバル"
- KIRandTVL_constituent_autonomous_province: "$OVERLORDADJ$領キリバス及びツバル州"
- KIRandTVL_constituent_autonomous_province_DEF: "$OVERLORDADJ$領キリバス及びツバル州"
- KIRandTVL_constituent_autonomous_province_ADJ: "$OVERLORD$領キリバス・ツバル"
- KIRandTVL_trust_territory: "$OVERLORDADJ$信託統治領キリバス及びツバル"
- KIRandTVL_trust_territory_DEF: "$OVERLORDADJ$信託統治領キリバス及びツバル"
- KIRandTVL_trust_territory_ADJ: "$OVERLORD$領キリバス・ツバル"
- KIRandTVL_mandated_territory_A: "$OVERLORDADJ$委任統治領キリバス及びツバル"
- KIRandTVL_mandated_territory_A_DEF: "$OVERLORDADJ$委任統治領キリバス及びツバル"
- KIRandTVL_mandated_territory_A_ADJ: "$OVERLORD$領キリバス・ツバル"
- KIRandTVL_mandated_territory_B: "$OVERLORDADJ$委任統治領キリバス及びツバル"
- KIRandTVL_mandated_territory_B_DEF: "$OVERLORDADJ$委任統治領キリバス及びツバル"
- KIRandTVL_mandated_territory_B_ADJ: "$OVERLORD$領キリバス・ツバル"
- KIRandTVL_mandated_territory_C: "$OVERLORDADJ$委任統治領キリバス及びツバル"
- KIRandTVL_mandated_territory_C_DEF: "$OVERLORDADJ$委任統治領キリバス及びツバル"
- KIRandTVL_mandated_territory_C_ADJ: "$OVERLORD$領キリバス・ツバル"
- KIRandTVL_leased_territory: "$OVERLORDADJ$領キリバス及びツバル"
- KIRandTVL_leased_territory_DEF: "$OVERLORDADJ$領キリバス及びツバル"
- KIRandTVL_leased_territory_ADJ: "$OVERLORD$領キリバス・ツバル"
-=======
  KIR-TVL_colony: "$OVERLORDADJ$領キリバス＝ツバル植民地"
  KIR-TVL_colony_DEF: "$OVERLORDADJ$領キリバス＝ツバル植民地"
  KIR-TVL_colony_ADJ: "$OVERLORD$領キリバス＝ツバル"
@@ -28504,7 +28410,6 @@
  KIR-TVL_leased_territory: "$OVERLORDADJ$領キリバス＝ツバル"
  KIR-TVL_leased_territory_DEF: "$OVERLORDADJ$領キリバス＝ツバル"
  KIR-TVL_leased_territory_ADJ: "$OVERLORD$領キリバス＝ツバル"
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  
  RAROTONGA_kingdom_colony: "$OVERLORDADJ$領ラロトンガ王国"
  RAROTONGA_kingdom_colony_DEF: "$OVERLORDADJ$領ラロトンガ王国"
